# jd-test-repo

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-plz.toml  rustfmt.toml
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml
.github/workflows/: audit.yml  check.yml  publish.yml  release.yml
docs/: CONTRIBUTING.md  DEVELOPING.md
src/: main.rs  version.rs
